[metadata]
name = HARNet
version = 0.1.0
author = Rafael Reisenhofer, Xandro Bayer
author_email = rafael.reisenhofer@uni-bremen.de
description = A tensorflow based framework to calculate  solutions to the Schrödinger equationsolutions to the Schrödinger equation
long_description = file: README.md
long_description_content_type = text/markdown
;url = https://github.com/pypa/sampleproject
;project_urls =
;    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

setup_requires =
    setuptools >=30.3.0
    wheel

install_requires =
    numpy
    matplotlib
    pandas
    tensorflow >= 2.5
    scikit-learn
    pydantic

[options.packages.find]
where = src
include = harnet*

#[options.extras_require]
#full = sphinx; sphinx-rtd-theme; pytest

[options.entry_points]
console_scripts =
    harnet = harnet.main:main

